overflow fix

--- a/src/App.css
+++ b/src/App.css
@@ -122,6 +122,10 @@ h1{
   font-weight:500;
 }
 @media (max-width: 768px) {
+  html{
+    overflow:hidden;
+  }
+
   h1{
     font-size:60px;
   }
